remove some serialization code